--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/NeedaMehmud2017/command-line-portfolio-page/issues"
   },
-  "homepage": "https://github.com/NeedaMehmud2017/command-line-portfolio-page#readme"
+  "homepage": "https://github.com/NeedaMehmud2017/command-line-portfolio-page#readme",
+  "dependencies": {
+    "node": "^16.4.0"
+  }
 }
