--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/NeedaMehmud2017/command-line-portfolio-page#readme",
   "dependencies": {
+    "inquirer": "^8.1.1",
     "node": "^16.4.0"
   }
 }
